Try to fix search box layout on mobile size devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -366,9 +366,9 @@ border-top: 1px solid rgba(143, 143, 142, 0.4);
 
 .search-form.input-field{
     position: relative;
-    top: 8px;
+    top: .56rem;
     background-color: ivory;
-    max-height: 50px;
+    max-height: 3rem;
     
 }
 
@@ -681,14 +681,14 @@ h4{
     background-color: rgba(250, 250, 240, .4);
 }
 
-.search-form input[type=text]:not(.browser-default){
+/* .search-form input[type=text]:not(.browser-default){
     height: 2rem;
-}
+} */
 
-.search-form.input-field{
+/* .search-form.input-field{
     top: .56rem;
     max-height: 2.9rem;
-}
+} */
 
 .row .col .search-form {
     margin-left: 2rem;
